SPRINT_3: update components

--- a/src/components/buttons/button-mixin.pug
+++ b/src/components/buttons/button-mixin.pug
@@ -1,1 +1,2 @@
-button(type=type || 'submit' class=`form-button ${btnClass}`)= content
+div.form-button
+    button(type=type || 'submit' class=`form-button ${btnClass}`)= content
