--- a/src/modules/chat/components/sidebar/user-chats/user-chats.pug
+++ b/src/modules/chat/components/sidebar/user-chats/user-chats.pug
@@ -3,5 +3,10 @@
     .user-chats__container
         .user-chats__img=id
         .user-chats__content
-            .user-chats__content-name=last_message.user.first_name
-            .user-chats__content-message=last_message.content
+            if last_message
+                .user-chats__content-name=last_message.user.first_name
+                .user-chats__content-message=last_message.content
+            else
+                .user-chats__content-name=''
+                .user-chats__content-message=''
+            
