--- a/src/modules/chat/components/main-chat/main-chat-header/main-chat-header.pug
+++ b/src/modules/chat/components/main-chat/main-chat-header/main-chat-header.pug
@@ -4,7 +4,6 @@ div.main-chat-header__block
             .main-chat-header__icon
                 img(src=`${img}` alt="avatar" class="avatar-img")
             .main-chat-header__name=username
-        .main-chat-header__user-action-btn
-            .main-chat-header__user-action-dot
-            .main-chat-header__user-action-dot
-            .main-chat-header__user-action-dot
+            .delete-user
+                | !{deleteLink}
+                | !{deleteUserToChat}
